istio/cacher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xmh-istio-cacher
  namespace: xmh3
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    xmh-istio: cacher
  sessionAffinity: None
  type: ClusterIP
