istio/ui-gw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xmh-istio-ui-gwsvc
  namespace: istio-system
spec:
  externalIPs:
    - 192.168.103.26
  ports:
    - name: http
      port: 9002
      protocol: TCP
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: ClusterIP
